fix: card container overflow auto

--- a/styles.css
+++ b/styles.css
@@ -325,7 +325,6 @@ main {
   gap: 1rem;
   margin-top: 1rem;
   width: 100%;
-  overflow-y: auto;
   padding-bottom: 1px;
 }
 
